--- a/roles/manageiq.worker/defaults/main.yml
+++ b/roles/manageiq.worker/defaults/main.yml
@@ -3,6 +3,7 @@ manageiq_postgresql_version: "9.5"
 manageiq_postgresql_scl: "rh-postgresql95"
 manageiq_ruby_version: "2.4"
 manageiq_ruby_scl: "rh-ruby24"
+manageiq_nodejs_scl: "rh-nodejs8"
 manageiq_logs_vg_name: "vg_miq_logs"
 manageiq_logs_lv_name: "lv_data"
 manageiq_git_repos:
